SMART-8: Removing unnecessary menu drop down, aligning hamburguer menu svg, fixing key properties issues, capture poperty to use phone camera.

--- a/src/components/SfHeader/_sf-header.scss
+++ b/src/components/SfHeader/_sf-header.scss
@@ -2,3 +2,9 @@
   color: white;
   font-weight: bolder;
 }
+
+.hambuguer-icon {
+  svg {
+    margin-top: 3px;
+  }
+}
